refactor: update branding

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
 @source '../**/*.js';
 
 @theme {
-    --color-primary: #014CBD;
+    --color-primary: #1C3259;
     --color-border : #F3F3F3;
     --color-dark : #444444;
     --color-blue-light : #DBEAFE;
